# evaluate-rag

./: .env.example  .gitignore  README.md  ai_judge.py  console_presenter.py  evaluate_light.py  file_search_rag.py  main.py  main_busca.py  pyproject.toml  read_files.py  report_generator.py  requirements.txt  retriever.py  semantic_encoder.py  test_config.json  test_litellm_providers.py
